working on the score - DOM manipulation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
   <link rel="stylesheet" href="/assets/style.css">
 </head>
 
-<body>
+<body class="background">
+
+  <div class = "header">
+    <div class = "scorebox" >
+      <h1>Score: <span id="score"></score></h1>
+      <h2>Your High Score: <span class="hiscore"></span></h2>
+    </div>
+    <div class = "title">
+      <!-- <img src="images/title.png" alt="nameofthegame"> -->
+  </div>
+</div>
+
   <script src="background.js"></script>
   <script src="player.js"></script>
   <script src="obstacles.js"></script>
