--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script src="player.js"></script>
   <script src="obstacles.js"></script>
   <script src="game.js"></script>
+  <script src="enemies.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
