implemented high score functionality with localStorage and created a new start game html page

--- a/game.html
+++ b/game.html
@@ -3,32 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Chonky Husky</title>
-  <script src="p5.js"></script>
+  <!-- <script src="p5.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
   <script defer src=https://cdn.JsDelivr.net/npm/p5/lib/addons/p5.sound.min.js></script>
-  <script defer src=https://cdn.JsDelivr.net/npm/p5/lib/addons/p5.dom.min.js></script>
+  <script defer src=https://cdn.JsDelivr.net/npm/p5/lib/addons/p5.dom.min.js></script> -->
   <link rel="stylesheet" href="/assets/style.css">
 </head>
-
-<body class="background">
-
-  <div class = "header">
-    <div class = "scorebox" >
-      <h1>Score: <span id="score"></score></h1>
-      <h2>Your High Score: <span id="best">0</span></h2>
-    </div>
-    <div class = "title">
-      <!-- <img src="images/title.png" alt="nameofthegame"> -->
+<body>
+  <div class="landing-card">
+    <h1 class="start-game">Start Game!</h1>
+      <h2>
+        <button type="button">
+          <a href="/index.html">Start Game!</a>
+        </button>
+      </h2>
   </div>
-</div>
-
-  <script src="background.js"></script>
+  <!-- <script src="background.js"></script>
   <script src="player.js"></script>
   <script src="obstacles.js"></script>
   <script src="game.js"></script>
   <script src="enemies.js"></script>
-  <script src="main.js"></script>
+  <script src="main.js"></script> -->
 </body>
 </html>
