--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@
   <link rel="stylesheet" href="/assets/style.css">
 </head>
 
-<body class="background">
+<div class="game-start">
+  <h1>Welcome To The Chonky Husky Game!</h1>
+  <h3>Press Enter To Start</h3>
+</div>
 
+<div class="game-over">
+
+</div>
+
+<div>
   <div class = "header">
     <div class = "scorebox" >
       <h1>Score: <span id="score"></score></h1>
       <h2>Your High Score: <span id="best">0</span></h2>
     </div>
     <div class = "title">
-      <!-- <img src="images/title.png" alt="nameofthegame"> -->
+    </div>
   </div>
 </div>
 
