changes to score and end game picture

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   <h3>Press Enter To Start</h3>
 </div>
 
-<div class="game-over">
+<!-- <div class="game-over">
   <h1>Game Over!</h1>
-  <h3>Press Backspace To Restart! <- </h3>
-</div>
+  <h3>Press Backspace To Restart!</h3>
+</div> -->
 
 <div>
   <div class = "header">
-    <div class = "scorebox" >
+    <div id = "scorebox" >
       <h1>Score: <span id="score"></score></h1>
       <h2>Your High Score: <span id="best">0</span></h2>
     </div>
