--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <script defer src=https://cdn.JsDelivr.net/npm/p5/lib/addons/p5.dom.min.js></script>
   <link rel="stylesheet" href="/assets/style.css">
 </head>
-
+<body>
+  
 <div class="game-start">
   <h1>Welcome To The Chonky Husky Game!</h1>
   <h3>Press Enter To Start</h3>
@@ -23,6 +24,7 @@
 </div> -->
 
 <div>
+  <!-- <img src="/assets/background/background-snow.jpg" alt="Italian Trulli"> -->
   <div class = "header">
     <div id = "scorebox" >
       <h1>Score: <span id="score"></score></h1>
