added game instructions and landing page

--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
 <body>
   
 <div class="game-start">
+  <img src="/assets/background/background-husky.jpg" alt="Italian Trulli">
   <h1>Welcome To The Chonky Husky Game!</h1>
+  <h4>Instructions: Move the Husky with the Left ← Or Right →  Arrows. Press Space to Jump ↑</h4> 
+  <h4>Collect the treats but avoid the Chocolate! <strong>3 Chocolate bars will be a Game Over!</strong> Good Luck!</h4>
   <h3>Press Enter To Start</h3>
 </div>
 
 <div>
-  <!-- <img src="/assets/background/background-snow.jpg" alt="Italian Trulli"> -->
   <div class = "header">
     <div id = "scorebox" >
       <h1>Score: <span id="score"></score></h1>
       <h2>Your High Score: <span id="best">0</span></h2>
+      Instructions: Move the Husky with the Left ← Or Right → Arrows. Press Space to Jump ↑
+  Collect the treats but avoid the Chocolate! 3 Chocolate bars will be a Game Over! 
     </div>
     <div class = "title">
     </div>
