fixed image path

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   
 <div class="game-start">
-  <img src="/assets/background/background-husky.jpg" alt="Italian Trulli">
+  <img src="assets/background/background-husky.jpg" alt="Husky in the Snow">
   <h1>Welcome To The Chonky Husky Game!</h1>
   <h4>Instructions: Move the Husky with the Left ← Or Right →  Arrows. Press Space to Jump ↑</h4> 
   <h4>Collect the treats but avoid the Chocolate! <strong>3 Chocolate bars will be a Game Over!</strong> Good Luck!</h4>
