--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
   <h1>Welcome To The Chonky Husky Game!</h1>
   <h4>Instructions: Move the Husky with the Left ← Or Right →  Arrows. Press Space to Jump ↑</h4> 
   <h4>Collect the treats but avoid the Chocolate! <strong>3 Chocolate bars will be a Game Over!</strong> Good Luck!</h4>
-  <h3>Press Enter To Start</h3>
+  <h3>Press Enter To Start and Backspace to restart</h3>
 </div>
 
 <div>
   <div class = "header">
     <div id = "scorebox" >
       <h1>Score: <span id="score"></score></h1>
-      <h2>Your High Score: <span id="best">0</span></h2>
-      Instructions: Move the Husky with the Left ← Or Right → Arrows. Press Space to Jump ↑
-  Collect the treats but avoid the Chocolate! 3 Chocolate bars will be a Game Over! 
+      <h4>Your High Score: <span id="best">0</span>
+        Instructions: Move the Husky with the Left ← Or Right → Arrows. Press Space to Jump ↑ 
+        Collect the treats but avoid the Chocolate! 3 Chocolate bars will be a Game Over! Press Backspace to restart
+      </h2>
     </div>
     <div class = "title">
     </div>
