changed text color

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
   <div class = "header">
     <div id = "scorebox" >
       <h1>Score: <span id="score"></score></h1>
-      <h4>Your High Score: <span id="best">0</span>
+      <h2>Your High Score: <span id="best">0</span></h2>
+      <h3>
         Instructions: Move the Husky with the Left ← Or Right → Arrows. Press Space to Jump ↑ 
         Collect the treats but avoid the Chocolate! 3 Chocolate bars will be a Game Over! Press Backspace to restart
-      </h2>
+      </h3> 
     </div>
     <div class = "title">
     </div>
